a bit of moc jsx

--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,13 @@
     em { font-family: monospace; }
     a { color: #5298fc; text-decoration: none; }
     </style>
+    <script src="http://fb.me/react-0.12.2.js"></script>
+    <script src="http://fb.me/JSXTransformer-0.12.2.js"></script>
+    <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
+    <script type="text/jsx" src="moc.jsx"></script>
   </head>
   <body>
-    <div>
-      <h1>Hello MOC</h1>
+    <div id="everything">
     </div>
   </body>
 </html>
