--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <meta charset="UTF-8">
     <title>Marketing Operations Center</title>
     <style>
     body { font-family: Helvetica, Arial, sans-serif; }
