--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,10 @@
     em { font-family: monospace; }
     a { color: #5298fc; text-decoration: none; }
     </style>
-    <script src="http://fb.me/react-0.12.2.js"></script>
-    <script src="http://fb.me/JSXTransformer-0.12.2.js"></script>
+    <script src="http://fb.me/react-0.13.1.min.js"></script>
+    <script src="https://www.parsecdn.com/js/parse-latest.js"></script>
+    <script src="https://www.parsecdn.com/js/parse-react.js"></script>
+    <script src="http://fb.me/JSXTransformer-0.13.1.js"></script>
     <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
     <script type="text/jsx" src="moc.jsx"></script>
   </head>
